<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="welcome_back">Welcome \nBack</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_sentence">Hey there! Create an account to shop.</string>
    <string name="signin">SIGN IN</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="return_to_homepage">Return to homepage</string>
    <string name="get_started">Get Started</string>
    <string name="home_header">Start with creating an account or sign in</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="sign_in_button">SIGN IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_edit">Password</string>
    <string name="email_edit">Email</string>
    <string name="need_account">Need an account? Click here!</string>
    <string name="Checkout">CHECKOUT</string>
    <string name="default_price">$000</string>
    <string name="total_bill_amount">Total Bill Amount:</string>
    <string name="cart_items">Cart Items</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="summary">Summary</string>
    <string name="Next">NEXT</string>
    <string name="confirm_order">CONFIRM &amp; PLACE ORDER</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="place_holder_address">123 Main Street\nApt. 4B\nSpringfield, IL 62704\nUSA</string>
    <string name="payment_option_placeholder">Payment Option</string>
    <string name="payment_option_choice">Cash On Delivery</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addAddress">ADD ADDRESS</string>
    <string name="search">Search</string>
</resources>