<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckingOutPage">



    <TextView
        android:id="@+id/txtCart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cart_items"
        android:padding="10dp"
        android:textColor="@color/light_blue"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/txtDelivery"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delivery"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtCart"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtPayment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/payment"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtDelivery"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtSummary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/summary"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtPayment"
        android:textSize="15sp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="560dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"/>

    <TextView
        android:id="@+id/txtTotalBill"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19sp"
        android:text="@string/total_bill_amount"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/calcTotalBill"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_price"
        android:textSize="19sp"
        android:textColor="@color/orange"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:padding="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>