<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummaryPage">

    <TextView
        android:id="@+id/txtCart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cart_items"
        android:padding="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/txtDelivery"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delivery"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtCart"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtPayment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/payment"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtDelivery"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtSummary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/summary"
        android:textColor="@color/light_blue"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtPayment"
        android:textSize="15sp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Summary Page"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/txtTotalBill"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:textSize="19sp"
        android:text="@string/total_bill_amount"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/calcTotalBill"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_price"
        android:textSize="19sp"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/placeholderAddress"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTotalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:fontFamily="sans-serif-light"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderAddress"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            
    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_holder_address"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/paymentOption"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:textSize="17sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/payment_option_placeholder"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/actualPaymentOption"
        android:padding="15dp"
        app:layout_constraintStart_toEndOf="@id/paymentOption"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_option_choice"
        android:textSize="19sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/confirm_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>