<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PaymentPage">

    <TextView
        android:id="@+id/txtCart"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cart_items"
        android:padding="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"/>


    <TextView
        android:id="@+id/txtDelivery"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delivery"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtCart"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtPayment"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/payment"
        android:layout_marginTop="60dp"
        android:textColor="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtDelivery"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtSummary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/summary"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/txtPayment"
        android:textSize="15sp"/>



    <Button
        android:id="@+id/btnNext"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Payment Page"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>