<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SignUpActivity"
    android:background="@drawable/backgroundui">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".50"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".70"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_80"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".85"/>

    <TextView
        android:id="@+id/signupHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="45dp"
        android:layout_marginBottom="550dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="225dp"/>

    <TextView
        android:id="@+id/signupSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_sentence"
        android:textSize="15dp"
        android:layout_marginBottom="380dp"
        android:layout_marginLeft="50dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupHeader"
        android:layout_marginRight="180dp"/>


    <EditText
        android:id="@+id/nameInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/full_name"
        android:singleLine = "true"
        android:padding="5dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/phoneInput"
        android:layout_marginBottom="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/buttonshapes"/>

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/phone_number"
        android:singleLine = "true"
        android:padding="5dp"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/horizontal1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/buttonshapes"/>

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/email_edit"
        android:singleLine = "true"
        android:padding="5dp"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="60dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal1"
        app:layout_constraintBottom_toTopOf="@id/horizontal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/buttonshapes"/>

    <EditText
        android:id="@+id/passInput"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:hint="@string/password_edit"
        android:padding="5dp"
        android:singleLine = "true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintBottom_toTopOf="@id/horizontal2"
        android:background="@drawable/buttonshapes"/>

    <EditText
        android:id="@+id/confirmPass"
        android:inputType="textPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:hint="@string/confirm_password"
        android:singleLine = "true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal2"
        android:background="@drawable/buttonshapes"/>

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/sign_up_caps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal3" />

    <TextView
        android:id="@+id/returnhome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="13sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:text="@string/return_to_homepage"/>




</androidx.constraintlayout.widget.ConstraintLayout>