<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments_for_checkout.SummaryPageFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"
        android:text="Cart Items"
        android:textColor="#343434"
        android:padding="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="110dp"/>

    <TextView
        android:id="@+id/txtTotalBill"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:textSize="19sp"
        android:text="@string/total_bill_amount"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/calcTotalBill"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_price"
        android:textSize="19sp"
        android:textColor="@color/orange"/>

    <TextView
        android:id="@+id/placeholderAddress"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTotalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:fontFamily="sans-serif-light"
        android:textSize="17sp"
        android:textColor="@color/black"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addressRecyclerView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholderAddress"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/paymentOption"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addressRecyclerView"
        android:textSize="17sp"
        android:fontFamily="sans-serif-light"
        android:text="@string/payment_option_placeholder"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/actualPaymentOption"
        android:padding="15dp"
        app:layout_constraintStart_toEndOf="@id/paymentOption"
        app:layout_constraintTop_toBottomOf="@id/addressRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_option_choice"
        android:textSize="19sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/confirm_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
