<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments_for_checkout.CheckoutPageFragment">



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="409dp"
        android:layout_height="560dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="170dp"/>

    <TextView
        android:id="@+id/txtTotalBill"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="19sp"
        android:text="@string/total_bill_amount"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/calcTotalBill"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/default_price"
        android:textSize="19sp"
        android:textColor="@color/orange"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="40dp"
        android:padding="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>